Quick db enablement using CosmosDB for MongoDB in toys app